Fix last logic bugs + CSS bug for overflowing text

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ a {
     border-style: solid;
     border-radius: 3%;
     padding: 15px;
+    width: 450px;
 }
 
 .calcScreen {
@@ -97,6 +98,9 @@ a {
     border-style: solid;
     font-size: 36px;
     padding: 12px;
+    white-space: nowrap;
+    overflow: hidden;
+
 }
 
 #calcScreen h3 {
